[tool.poetry]
name = "py-verto"
version = "0.1.0"
description = ""
authors = ["Patrik Larsen <patrik@patriklarsen.com>"]
readme = "README.md"
packages = [{include = "py_verto"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
pytest-runner = "^6.0.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
